ndb - bug#49156 - account for threads when computing size of DIH fragment pools, remove dead code (that I actually thought was the problem :-)